# mcai_worker_sdk

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  build.rs  parameter.h  worker.c  worker.cpp  worker.py
.github/: dependabot.yml
c_amqp_worker/: .gitignore
c_amqp_worker/src/: constants.rs  worker.rs
c_mcai_worker_sdk/: Cargo.toml  Dockerfile  README.md  media_worker.cpp  media_worker.h  worker.cpp  worker.h
c_mcai_worker_sdk/src/: constants.rs  filters.rs  lib.rs  main.rs  parameters.rs  process_return.rs  stream_descriptors.rs  types.rs  utils.rs  worker.rs
c_mcai_worker_sdk/src/media/: filters.rs  mod.rs  stream_descriptors.rs
c_mcai_worker_sdk/tests/: utils_test.rs  worker_test.rs
examples/: process_message.rs  worker.rs
jl_mcai_worker_sdk/: Cargo.toml
jl_mcai_worker_sdk/src/: main.rs
media-stream/: Cargo.toml
media-stream/src/: lib.rs
py_mcai_worker_sdk/: Cargo.toml  Dockerfile  Dockerfile.buster  Dockerfile.media  LICENSE  README.md  media_worker.py  worker.py
py_mcai_worker_sdk/examples/: message.json
py_mcai_worker_sdk/src/: helpers.rs  main.rs  parameters.rs
py_mcai_worker_sdk/src/media/: format_context.rs  frame.rs  mod.rs
py_mcai_worker_sdk/src/media/ebu_ttml_live/: mod.rs  time_expression.rs
rs_mcai_worker_sdk/: Cargo.toml  LICENSE  README.md  build.rs
rs_mcai_worker_sdk/examples/: error_order.json  media_order.json  media_order_with_sleep.json  order_consuming_jobs_resume.json  order_consuming_jobs_stop.json  order_init_process.json  order_start_process.json  order_stop_process.json  srt_order.json  success_order.json  worker.rs
rs_mcai_worker_sdk/src/: config.rs  error.rs  lib.rs  message_event.rs  prelude.rs  process_frame.rs  process_result.rs  start_worker.rs
rs_mcai_worker_sdk/src/channels/: bind_description.rs  exchange_description.rs  mod.rs  queue_description.rs
rs_mcai_worker_sdk/src/client/: amqp_connection.rs  mod.rs
rs_mcai_worker_sdk/src/job/: job_progression.rs  job_result.rs  job_status.rs  mod.rs
rs_mcai_worker_sdk/src/message/: mod.rs
rs_mcai_worker_sdk/src/message/control/: direct_message.rs  mod.rs
rs_mcai_worker_sdk/src/message/media/: filters.rs  media_stream.rs  mod.rs  output.rs  source.rs  srt.rs
rs_mcai_worker_sdk/src/message/media/audio/: mod.rs
rs_mcai_worker_sdk/src/message/media/ebu_ttml_live/: decoder.rs  mod.rs  time_expression.rs
rs_mcai_worker_sdk/src/message/media/json/: decoder.rs  mod.rs
rs_mcai_worker_sdk/src/message/media/ttml/: mod.rs  time_expression.rs
rs_mcai_worker_sdk/src/message/media/video/: mod.rs  region_of_interest.rs
rs_mcai_worker_sdk/src/message_exchange/: mod.rs  order_message.rs  queue_name.rs
rs_mcai_worker_sdk/src/message_exchange/local/: exchange.rs  mod.rs
rs_mcai_worker_sdk/src/message_exchange/message/: feedback.rs  mod.rs  order_message.rs  response_message.rs
rs_mcai_worker_sdk/src/message_exchange/rabbitmq/: connection.rs  consumer.rs  current_orders.rs  exchange.rs  helpers.rs  mod.rs  publisher.rs
rs_mcai_worker_sdk/src/message_exchange/rabbitmq/channels/: bind_description.rs  exchange_description.rs  mod.rs  queue_description.rs
rs_mcai_worker_sdk/src/message_exchange/rabbitmq/publish/: feedback_publisher.rs  job_completed.rs  job_initialized.rs  job_missing_requirements.rs  job_not_implemented.rs  job_parameter_error.rs  job_processing_error.rs  job_progression.rs  job_runtime_error.rs  job_started.rs  job_status.rs  mod.rs  publish_job_response.rs  publish_worker_response.rs  worker_status.rs
rs_mcai_worker_sdk/src/parameter/: container.rs  credential.rs  media_segment.rs  mod.rs  store.rs  vault.rs
rs_mcai_worker_sdk/src/processor/: media_process.rs  mod.rs  process.rs  process_status.rs  simple_process.rs
rs_mcai_worker_sdk/src/processor/media_process/: mod.rs  threaded_media_process.rs
rs_mcai_worker_sdk/src/processor/simple_process/: mod.rs
rs_mcai_worker_sdk/src/worker/: activity.rs  configuration.rs  context.rs  docker.rs  mod.rs  status.rs  system_information.rs  worker_parameter.rs  worker_parameter_type.rs
rs_mcai_worker_sdk/tests/: cgroup_k8s.sample  credential_test.rs  error_test.rs  job_result_test.rs  job_test.rs  media_source_test.rs  parameter_value_test.rs  processor.rs  processor_test.rs  tests.rs  worker_configuration_test.rs
rs_mcai_worker_sdk/tests/amqp/: connection.rs
rs_mcai_worker_sdk/tests/generator/: ffmpeg.rs  srt_stream.rs
rs_mcai_worker_sdk/tests/media/: seek.rs
rs_mcai_worker_sdk/tests/processor/: media_processor.rs  rabbitmq_simple_status.rs  rabbitmq_simple_stop_job.rs  simple_job_processor.rs  simple_processor.rs  simple_stop_job.rs
rs_mcai_worker_sdk/tests/processor/media/: local_complete_job.rs  local_init_job_error.rs  rabbitmq_stop_job.rs
rs_mcai_worker_sdk/tests/processor/simple/: init_job_error.rs  job_processor.rs  local_init_job_error.rs  local_job_processor.rs  rabbitmq_stop_job.rs
src/: config.rs  constants.rs  emitter.rs  job.rs  lib.rs  main.rs  message_helpers.rs  process_return.rs  worker.rs
src/channels/: bind_description.rs
src/job/: job_progression.rs  job_result.rs  job_status.rs  mod.rs
src/message/: helpers.rs  mod.rs
src/parameter/: container.rs  credential.rs  mod.rs
src/worker/: mod.rs
tests/: cgroup.sample  credential_test.rs  job_result_test.rs  job_test.rs
