[package]
name = "amqp_worker"
version = "0.6.0"
authors = [
  "Marc-Antoine Arnaud <arnaud.marcantoine@gmail.com>",
  "Valentin Noel <valentin.noel@media-io.com>"
]
description = "AMQP Worker to listen and provide trait to process message"
keywords = ["AMQP", "micro-service"]
license = "MIT"
repository = "https://github.com/media-io/rs_amqp_worker"
homepage = "https://github.com/media-io/rs_amqp_worker"
documentation = "https://docs.rs/amqp_worker"
readme = "README.md"
edition = "2018"

[dependencies]
amq-protocol-types = "^2.1"
amq-protocol-uri = "^2.1"
chrono = "0.4"
env_logger = "^0.6"
failure = "^0.1"
futures = "^0.1"
lapin-futures = "^0.25"
log = "0.4.5"
reqwest = "0.9.8"
semver = { version = "^0.9", features = ["serde"] }
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
tokio = "^0.1"

[dev-dependencies]
assert_matches = "1.3.0"
mockito = "0.22"
