[package]
name = "c_amqp_worker"
version = "0.3.1"
authors = [
  "Valentin NOEL <valentin.noel@media-io.com>",
  "Marc-Antoine Arnaud <maarnaud@media-io.com>",
]
edition = "2018"

[dependencies]
libc = "0.2"
amqp_worker = "0.9.0"
lapin-futures = "0.28.4"
log = "0.4.8"
semver = "^0.9"
serde_json = "^1.0"
libloading = "0.5"
