[package]
name = "c_mcai_worker_sdk"
version = "0.11.0"
authors = [
  "Valentin NOEL <valentin.noel@media-io.com>",
  "Marc-Antoine Arnaud <maarnaud@media-io.com>",
]
edition = "2018"

[features]
default = []
media = ["mcai_worker_sdk/media"]

[dependencies]
libc = "0.2"
mcai_worker_sdk = { path = "../rs_mcai_worker_sdk" }
schemars = "0.8.0"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
libloading = "0.6"
