[package]
name = "c_mcai_worker_sdk"
version = "1.0.0-alpha3"
authors = [
  "Valentin NOEL <valentin.noel@media-io.com>",
  "Marc-Antoine Arnaud <maarnaud@media-io.com>",
]
description = "AMQP Worker to listen and provide trait to process message"
keywords = ["AMQP", "micro-service"]
license = "MIT"
repository = "https://github.com/media-cloud-ai/mcai_worker_sdk"
homepage = "https://github.com/media-cloud-ai/mcai_worker_sdk"
documentation = "https://docs.rs/py_mcai_worker_sdk"
readme = "README.md"
edition = "2018"

[lib]
name = "c_mcai_worker_sdk"
path = "src/lib.rs"

[[bin]]
name = "c_mcai_worker_sdk"
path = "src/main.rs"

[features]
default = []
media = ["mcai_worker_sdk/media"]

[dependencies]
libc = "0.2"
mcai_worker_sdk = { version = "1.0.0-alpha3", path = "../rs_mcai_worker_sdk" }
schemars = "0.8.0"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
libloading = "0.6"
