[package]
name = "py_mcai_worker_sdk"
version = "0.11.0-alpha"
authors = [
  "Valentin NOEL <valentin.noel@media-io.com>",
  "Marc-Antoine Arnaud <maarnaud@media-io.com>",
]
edition = "2018"

[features]
default = []
media = ["mcai_worker_sdk/media"]

[dependencies]
dict_derive = "0.2.0"
mcai_worker_sdk = { path = "../rs_mcai_worker_sdk" }
pyo3 = "0.10"
schemars = "0.7.6"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
