[package]
name = "py_mcai_worker_sdk"
version = "1.0.0-alpha2"
authors = [
  "Valentin NOEL <valentin.noel@media-io.com>",
  "Marc-Antoine Arnaud <maarnaud@media-io.com>",
]
description = "AMQP Worker to listen and provide trait to process message"
keywords = ["AMQP", "micro-service", "python"]
license = "MIT"
repository = "https://github.com/media-cloud-ai/mcai_worker_sdk"
homepage = "https://github.com/media-cloud-ai/mcai_worker_sdk"
documentation = "https://docs.rs/py_mcai_worker_sdk"
readme = "README.md"
edition = "2018"

[features]
default = []
media = [
  "mcai_worker_sdk/media",
  "mcai_worker_sdk/python"
]

[dependencies]
dict_derive = { version = "0.3.0", git = 'https://github.com/media-io/dict-derive' }
mcai_worker_sdk = { version = "1.0.0-alpha2", path = "../rs_mcai_worker_sdk" }
pyo3 = "0.13"
schemars = "0.8.0"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
