[package]
name = "mcai_worker_sdk"
version = "1.0.0-alpha3"
authors = [
  "Marc-Antoine Arnaud <maarnaud@media-io.com>",
  "Valentin Noel <valentin.noel@media-io.com>"
]
description = "AMQP Worker to listen and provide trait to process message"
keywords = ["AMQP", "micro-service"]
license = "MIT"
repository = "https://github.com/media-cloud-ai/mcai_worker_sdk"
homepage = "https://github.com/media-cloud-ai/mcai_worker_sdk"
documentation = "https://docs.rs/mcai_worker_sdk"
readme = "README.md"
edition = "2018"

[features]
media = [
  "bytes",
  "ringbuf",
  "stainless_ffmpeg",
  "stainless-ffmpeg-sys",
  "secure-reliable-transport",
]
python = [
  "dict_derive",
  "pyo3",
]

[dependencies]
amq-protocol = "6.0"
amq-protocol-types = "6.0"
amq-protocol-uri = "6.0"
async-amqp = "1.1.0"
async-std = {version = "1.8.0", features = ["unstable"]}
bytes = {version = "0.5", optional = true}
chrono = {version = "0.4", features = ["serde"]}
env_logger = "^0.7"
failure = "^0.1"
futures = "^0.3"
futures-util = "^0.3"
futures-executor = "^0.3"
futures-core = "^0.3"
lapin = "1.6"
log = "0.4.5"
reqwest = { version = "0.10", features = ["blocking", "json"] }
schemars = "0.8.0"
semver = { version = "0.11", features = ["serde"] }
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
sysinfo = "^0.15"
tokio = "^0.2"
uuid = { version = "^0.8", features = ["serde", "v4"] }
xml-rs = "0.8"
yaserde = "^0.5"
yaserde_derive = "^0.5"
regex = "1"
## dependencies for media feature
ringbuf = { version = "0.2.1", optional = true }
stainless_ffmpeg = { version = "0.2.2", optional = true }
stainless-ffmpeg-sys = { version = "4.2.3", optional = true }
secure-reliable-transport = { version = "0.2.1", optional = true }
## dependencies for python feature
dict_derive = { version = "0.3.0", optional = true, git = 'https://github.com/media-io/dict-derive' }
pyo3 = { version = "0.13", optional = true }

[dev-dependencies]
assert_matches = "1.3.0"
mockito = "0.27"

[build-dependencies]
built = "0.4"
